--- a/KedaiSusahTidur/index.html
+++ b/KedaiSusahTidur/index.html
@@ -77,6 +77,15 @@
         </div>
         
     </section>
+    <section id="cta">
+        <div class="container"> 
+           <h3>
+               Jika ada Kopi Di Situlah Akan Keluar Imajinasi
+           </h3>
+           <button type="button" class="btn btn-secondary btn-lg download"><i class="fab fa-instagram"></i> Follow</button>
+           <button type="button" class="btn btn-secondary btn-lg download"><i class="fab fa-google-play"></i> Download</button>
+        </div> 
+    </section>
 
     <script src="https://kit.fontawesome.com/8230493871.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
