--- a/01-HTML-Basic/02-Atribut.html
+++ b/01-HTML-Basic/02-Atribut.html
@@ -17,3 +17,4 @@
   <!-- ketiga atribut di atas dapat digunakan hampir di semua tag html yang ditampilkan ke user -->
 </body>
 </html>
+<!-- assalamualaikum kak, tolong merge buuat hacktober fest. saya najwan dari rpld-->
