landing page update (section)

--- a/landing-page/landing.html
+++ b/landing-page/landing.html
@@ -31,3 +31,16 @@
             </nav>
         </div>
     </header>
+    <section id="showcase">
+        <div class="container">
+            <h2>Jago di dunia dan rohani</h2>
+            <p> <!-- Ini adalah tag paragraf -->
+                an element of a culture or system of behavior that may be considered to be passed from one individual to
+                another by nongenetic means, especially imitation.
+            </p>
+        </div>
+
+    </section>
+</body>
+
+</html>
