landing page update

--- a/landing-page/landing.html
+++ b/landing-page/landing.html
@@ -16,8 +16,10 @@
 <body>
     <header>
         <!-- gunakan tag ini unutk membuat header dan di isi tag seperti navigasi -->
-        <div class="container"> <!-- Atribut kelas HTML digunakan untuk menentukan kelas untuk elemen HTML. Beberapa elemen HTML dapat berbagi kelas yang sama. -->
-            <div id="judul"> <!-- Atribut id HTML digunakan untuk menentukan id unik untuk elemen HTML. Anda tidak dapat memiliki lebih dari satu elemen dengan id yang sama dalam dokumen HTML. -->
+        <div class="container">
+            <!-- Atribut kelas HTML digunakan untuk menentukan kelas untuk elemen HTML. Beberapa elemen HTML dapat berbagi kelas yang sama. -->
+            <div id="judul">
+                <!-- Atribut id HTML digunakan untuk menentukan id unik untuk elemen HTML. Anda tidak dapat memiliki lebih dari satu elemen dengan id yang sama dalam dokumen HTML. -->
                 <h1>Sugma</h1>
             </div>
             <nav>
@@ -34,12 +36,24 @@
     <section id="showcase">
         <div class="container">
             <h2>Jago di dunia dan rohani</h2>
-            <p> <!-- Ini adalah tag paragraf -->
+            <p>
+                <!-- Ini adalah tag paragraf -->
                 an element of a culture or system of behavior that may be considered to be passed from one individual to
                 another by nongenetic means, especially imitation.
             </p>
         </div>
+    </section>
 
+    <section id="newsletter">
+        <div class="container">
+            <h1>Subcribe untuk mendapatkan informasi baru!</h1>
+            
+                <form>
+                    <input type="email" placeholder="Enter email..."> <!-- ini untuk memilih tipenya -->
+                    <button type="submit" class="button_1"><span class="text">Subscribe</span></button> <!-- tag button itu unutk membuat tombol -->
+                </form>
+            
+        </div>
     </section>
 </body>
 
